--- a/agijagi/app/src/main/res/layout/fragment_signup_seller.xml
+++ b/agijagi/app/src/main/res/layout/fragment_signup_seller.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/jagi_ivory"
     android:orientation="vertical"
-    tools:context=".signup.SignupSellerFragment">
+    tools:context=".signup.ui.SignupSellerFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_signup_seller_toolbar"
@@ -38,16 +38,17 @@
                     android:id="@+id/editinputlayout_signup_seller_business_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:background="@drawable/wide_box_rounded_stroke"
-                    app:layout_constraintTop_toTopOf="parent">
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:endIconMode="clear_text"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:layout_marginBottom="1dp">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinput_signup_seller_business_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="상호명"
-                        android:textColorHint="@color/transparency" />
-
+                        android:hint="상호명" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -55,16 +56,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinput_signup_seller_registration_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업자등록번호 ( 01 - 000 - 0000 )"
-                        android:textColorHint="@color/transparency" />
-
+                        android:hint="사업자등록번호 ( 000 - 00 - 00000 )"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -72,16 +73,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinput_signup_seller_representative_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="대표자명"
-                        android:textColorHint="@color/transparency" />
-
+                        android:hint="대표자명"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -89,7 +90,9 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -97,8 +100,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="E-mail"
-                        android:textColorHint="@color/transparency" />
-
+                        android:inputType="textEmailAddress"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -108,6 +110,10 @@
                     android:layout_marginTop="8dp"
                     android:background="@drawable/wide_box_rounded_stroke"
                     app:endIconMode="password_toggle"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:counterMaxLength="15"
+                    app:counterEnabled="true"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -115,9 +121,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="비밀번호 (공백 제외, 6 ~ 15 자)"
-                        android:inputType="textPassword"
-                        android:textColorHint="@color/transparency" />
-
+                        android:inputType="textPassword"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -125,8 +129,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke"
                     app:endIconMode="password_toggle"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:counterMaxLength="15"
+                    app:counterEnabled="true"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -134,9 +141,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="비밀번호 확인"
-                        android:inputType="textPassword"
-                        android:textColorHint="@color/transparency" />
-
+                        android:inputType="textPassword"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -144,16 +149,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinput_signup_seller_business_address"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업장 주소"
-                        android:textColorHint="@color/transparency" />
-
+                        android:hint="사업장 주소"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
@@ -161,16 +166,16 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/wide_box_rounded_stroke"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
                     app:layout_constraintTop_toTopOf="parent">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editinput_signup_seller_business_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="사업장 전화번호 ( 010 - 0000 - 0000 )"
-                        android:textColorHint="@color/transparency" />
-
+                        android:hint="사업장 전화번호 ( 010 - 0000 - 0000 )"/>
                 </com.google.android.material.textfield.TextInputLayout>
 
             </LinearLayout>
@@ -200,44 +205,45 @@
                         android:id="@+id/textview_signup_seller_file"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/textview_signup_seller_text"
                         android:layout_marginStart="16dp"
                         android:layout_marginTop="4dp"
                         android:text=""
                         android:textColor="@color/black"
-                        android:textSize="14dp" />
+                        android:textSize="14dp"
+                        android:layout_below="@+id/textview_signup_seller_text"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/button_signup_seller_add_file"
                         android:layout_width="64dp"
                         android:layout_height="36dp"
-                        android:layout_alignParentRight="true"
-                        android:layout_marginStart="138dp"
+                        android:text="파일 추가"
+                        android:textColor="@color/white"
+                        android:background="@drawable/small_box_rounded_button_stroke"
                         android:layout_marginTop="24dp"
+                        android:layout_marginStart="138dp"
                         android:layout_marginEnd="16dp"
                         android:layout_toRightOf="@+id/textview_signup_seller_text"
-                        android:background="@drawable/small_box_rounded_button_stroke"
-                        android:text="파일 추가"
-                        android:textColor="@color/white" />
+                        android:layout_alignParentRight="true"/>
 
                     <androidx.appcompat.widget.AppCompatButton
                         android:id="@+id/button_signup_seller_complete"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_below="@+id/button_signup_seller_add_file"
-                        android:layout_alignParentBottom="true"
                         android:layout_marginTop="64dp"
-                        android:background="@drawable/wide_box_selected_active"
                         android:text="가입하기"
                         android:textColor="@color/jagi_hint_color"
-                        android:textSize="16dp" />
+                        android:textSize="16dp"
+                        android:background="@drawable/wide_box_selected_active"
+                        android:layout_below="@+id/button_signup_seller_add_file"
+                        android:layout_alignParentBottom="true"/>
+
 
                 </RelativeLayout>
 
             </LinearLayout>
-
         </LinearLayout>
 
-    </ScrollView>
 
+
+    </ScrollView>
 </LinearLayout>
