--- a/agijagi/app/src/main/res/layout/fragment_google_signup_seller.xml
+++ b/agijagi/app/src/main/res/layout/fragment_google_signup_seller.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/jagi_ivory"
     android:orientation="vertical"
-    tools:context=".signup.SignupGoogleSellerFragment">
+    tools:context=".signup.ui.SignupGoogleSellerFragment">
 
     <com.google.android.material.appbar.MaterialToolbar
         android:id="@+id/toolbar_google_signup_seller_toolbar"
@@ -16,165 +16,164 @@
         app:navigationIcon="@drawable/arrow_back_24px"
         app:title="회원가입" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
 
         <LinearLayout
-            android:id="@+id/linearlayout_google_signup_seller_layout_inside"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="64dp"
-            android:layout_marginEnd="16dp"
             android:orientation="vertical">
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/editinputlayout_google_signup_seller_business_name"
+            <LinearLayout
+                android:id="@+id/linearlayout_google_signup_seller_layout_inside"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="@drawable/wide_box_rounded_stroke"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="64dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editinput_google_signup_seller_business_name"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editinputlayout_google_signup_seller_business_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="상호명"
-                    android:textColorHint="@color/transparency" />
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:layout_constraintTop_toTopOf="parent">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editinput_google_signup_seller_business_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="상호명"/>
+                </com.google.android.material.textfield.TextInputLayout>
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/editinputlayout_google_signup_seller_representative_name"
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editinputlayout_google_signup_seller_representative_name"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editinput_google_signup_seller_representative_name"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="대표자명"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editinputlayout_google_signup_seller_registration_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editinput_google_signup_seller_registration_number"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="사업자등록번호"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editinputlayout_google_signup_seller_business_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editinput_google_signup_seller_business_address"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="사업장 주소"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+                <com.google.android.material.textfield.TextInputLayout
+                    android:id="@+id/editinputlayout_google_signup_seller_business_number"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="8dp"
+                    app:endIconMode="clear_text"
+                    app:hintEnabled="false"
+                    app:boxStrokeColor="@color/jagi_brown"
+                    app:layout_constraintTop_toTopOf="parent">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/editinput_google_signup_seller_business_number"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:hint="사업장 전화번호"/>
+                </com.google.android.material.textfield.TextInputLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/wide_box_rounded_stroke"
-                app:layout_constraintTop_toTopOf="parent">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editinput_google_signup_seller_representative_name"
+                <RelativeLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="대표자명"
-                    android:textColorHint="@color/transparency" />
+                    android:layout_height="wrap_content">
 
-            </com.google.android.material.textfield.TextInputLayout>
+                    <TextView
+                        android:id="@+id/textview_google_signup_seller_text"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="20dp"
+                        android:text="사업자 등록증 추가"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                        android:textColor="@color/black"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
 
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/editinputlayout_google_signup_seller_registration_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/wide_box_rounded_stroke"
-                app:layout_constraintTop_toTopOf="parent">
+                    <TextView
+                        android:id="@+id/textview_google_signup_seller_file"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="4dp"
+                        android:text="등록증.pdf"
+                        android:textColor="@color/black"
+                        android:textSize="14dp"
+                        android:layout_below="@+id/textview_google_signup_seller_text"/>
 
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editinput_google_signup_seller_registration_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="사업자등록번호"
-                    android:textColorHint="@color/transparency" />
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/button_google_signup_seller_add_file"
+                        android:layout_width="64dp"
+                        android:layout_height="36dp"
+                        android:text="파일 추가"
+                        android:textColor="@color/white"
+                        android:background="@drawable/small_box_rounded_button_stroke"
+                        android:layout_marginTop="24dp"
+                        android:layout_marginStart="138dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_toRightOf="@+id/textview_google_signup_seller_text"
+                        android:layout_alignParentRight="true"/>
 
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/editinputlayout_google_signup_seller_business_address"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/wide_box_rounded_stroke"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editinput_google_signup_seller_business_address"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="사업장 주소"
-                    android:textColorHint="@color/transparency" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/editinputlayout_google_signup_seller_business_number"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:background="@drawable/wide_box_rounded_stroke"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:id="@+id/editinput_google_signup_seller_business_number"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:hint="사업장 전화번호"
-                    android:textColorHint="@color/transparency" />
-
-            </com.google.android.material.textfield.TextInputLayout>
-
+                    <androidx.appcompat.widget.AppCompatButton
+                        android:id="@+id/button_google_signup_seller_complete"
+                        android:layout_width="match_parent"
+                        android:layout_height="56dp"
+                        android:text="가입하기"
+                        android:textColor="@color/jagi_hint_color"
+                        android:textSize="16dp"
+                        android:background="@drawable/wide_box_selected_active"
+                        android:layout_alignParentBottom="true"/>
+                </RelativeLayout>
+            </LinearLayout>
         </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <TextView
-                    android:id="@+id/textview_google_signup_seller_text"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="20dp"
-                    android:text="사업자 등록증 추가"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                    android:textColor="@color/black"
-                    android:textSize="16dp"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textview_google_signup_seller_file"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_below="@+id/textview_google_signup_seller_text"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="4dp"
-                    android:text="등록증.pdf"
-                    android:textColor="@color/black"
-                    android:textSize="14dp" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button_google_signup_seller_add_file"
-                    android:layout_width="64dp"
-                    android:layout_height="36dp"
-                    android:layout_alignParentRight="true"
-                    android:layout_marginStart="138dp"
-                    android:layout_marginTop="24dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_toRightOf="@+id/textview_google_signup_seller_text"
-                    android:background="@drawable/small_box_rounded_button_stroke"
-                    android:text="파일 추가"
-                    android:textColor="@color/white" />
-
-                <androidx.appcompat.widget.AppCompatButton
-                    android:id="@+id/button_google_signup_seller_complete"
-                    android:layout_width="match_parent"
-                    android:layout_height="56dp"
-                    android:layout_alignParentBottom="true"
-                    android:background="@drawable/wide_box_selected_active"
-                    android:text="가입하기"
-                    android:textColor="@color/jagi_hint_color"
-                    android:textSize="16dp" />
-
-            </RelativeLayout>
-
-        </LinearLayout>
-
-    </LinearLayout>
 
 </LinearLayout>
