--- a/agijagi/app/src/main/res/values/array.xml
+++ b/agijagi/app/src/main/res/values/array.xml
@@ -71,7 +71,7 @@
     </array>
 
     <array name="custom_option_select">
-        <item>래터링</item>
+        <item>레터링</item>
         <item>이미지</item>
     </array>
 
